display and scrollbar fixed

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -24,6 +24,15 @@ html {
   vertical-align: inherit;
 }
 
+* {
+  scrollbar-width: thin;
+}
+
+::-webkit-scrollbar {
+  width: 8px !important;
+  height: 8px !important;
+}
+
 body {
   position: relative;
   height: 100%;
