--- a/styles/sass/styles/_reset.sass
+++ b/styles/sass/styles/_reset.sass
@@ -21,6 +21,12 @@ html
     text-decoration: inherit
     vertical-align: inherit
 
+*
+    scrollbar-width: thin
+
+::-webkit-scrollbar 
+    width: 8px !important                       /* Add the correct scroll resizing in Chrome */
+    height: 8px !important                      /* Add the correct scroll resizing in Chrome */
 
 body
     position: relative
